--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="#">Портфоліо</a>
              </li>
              <li>
-                <a href="#">Студія</a>
+                <a href="#">Контакти</a>
              </li>
            </ul>
         </nav>
@@ -36,9 +36,11 @@
         </ul>        
     </header>
     <main>
+      <section>
         <!-- Герой -->
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
+      </section>
       <section>
         <!-- Особливості -->
         <h2 hidden>Особливості</h2>
@@ -82,24 +84,24 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <h3>Ігор Дем'яненко</h3>
-                <p>Product Designer</p>
                 <img src="./images/img11.jpg" alt="Ігор Дем'яненко" width="270">
+                <h3>Ігор Дем'яненко</h3>
+                <p>Product Designer</p>                
             </li>
             <li>
-                <h3>Ольга Рєпіна</h3>
-                <p>Frontend Developer</p>
                 <img src="./images/img44.jpg" alt="Ольга Рєпіна" width="270">
+                <h3>Ольга Рєпіна</h3>
+                <p>Frontend Developer</p>                
             </li>
             <li>
-                <h3>Микола Тарасов</h3>
-                <p>Marketing</p>
                 <img src="./images/img22.jpg" alt="Микола Тарасов" width="270">
+                <h3>Микола Тарасов</h3>
+                <p>Marketing</p>                
             </li>
             <li>
-                <h3>Михайло Єрмаков</h3>
-                <p>UI Designer</p>
                 <img src="./images/img33.jpg" alt="Михайло Єрмаков" width="270">
+                <h3>Михайло Єрмаков</h3>
+                <p>UI Designer</p>                
             </li>
         </ul>
       </section>
@@ -110,7 +112,7 @@
         <address>
             <ul>
                 <li>
-                    <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">м. Київ, пр-т Лесі Українки, 26</a>
+                    <a href="https://goo.gl/maps/jK3vv2s47Ht4KwbE7" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
                 <li>
                     <a href="malto:info@devstudio.com">info@devstudio.com</a>
